@@ -1,69 +1,68 @@
-#---
-#apiVersion: apps/v1
-#kind: Deployment
-#metadata:
-#  name: wordpress
-#  labels:
-#    app: wordpress
-#spec:
-#  strategy:
-#    type: Recreate
-#  template:
-#    metadata:
-#      labels:
-#        app: wordpress
-#        tier: frontend
-#    spec:
-#      containers:
-#      - image: wordpress:4.8.0-apache
-#        name: wordpress
-#        env:
-#        - name: WORDPRESS_DB_HOST
-#          value: wordpress-mysql
-#        - name: WORDPRESS_DB_PASSWORD
-#          value: {{ WORDPRESS_PASSWORD }}
-#        ports:
-#        - containerPort: 80
-#          name: wordpress
-#        volumeMounts:
-#        - name: wordpress-persistent-storage
-#          mountPath: /var/www/html
-#      volumes:
-#      - name: wordpress-persistent-storage
-#        persistentVolumeClaim:
-#          claimName: wp-pv-claim
-#options:
-#grace_period_seconds: 5
-#propagation_policy: 'Foreground'
-#namespace: 'default'
-#---
-#apiVersion: v1
-#kind: Service
-#metadata:
-#  name: wordpress
-#  labels:
-#    app: wordpress
-#spec:
-#  ports:
-#    - port: 80
-#      nodePort: 30080
-#  selector:
-#    app: wordpress
-#    tier: frontend
-#  type: LoadBalancer
-#---
-#apiVersion: v1
-#kind: PersistentVolumeClaim
-#metadata:
-#  name: wp-pv-claim
-#  labels:
-#    app: wordpress
-#spec:
-#  accessModes:
-#    - ReadWriteOnce
-#  resources:
-#    requests:
-#      storage: 20Gi
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: wordpress
+  labels:
+    app: wordpress
+spec:
+  strategy:
+    type: Recreate
+  selector:
+    matchLabels:
+      app: wordpress
+  template:
+    metadata:
+      labels:
+        app: wordpress
+        tier: frontend
+    spec:
+      containers:
+      - image: wordpress:4.8.0-apache
+        name: wordpress
+        env:
+        - name: WORDPRESS_DB_HOST
+          value: wordpress-mysql
+        - name: WORDPRESS_DB_PASSWORD
+          value: {{ WORDPRESS_PASSWORD }}
+        ports:
+        - containerPort: 80
+          name: wordpress
+        volumeMounts:
+        - name: wordpress-persistent-storage
+          mountPath: /var/www/html
+      volumes:
+      - name: wordpress-persistent-storage
+        persistentVolumeClaim:
+          claimName: wp-pv-claim
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: wordpress
+  labels:
+    app: wordpress
+spec:
+  ports:
+    - port: 80
+      nodePort: 30080
+  selector:
+    app: wordpress
+    tier: frontend
+  type: LoadBalancer
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: wp-pv-claim
+  labels:
+    app: wordpress
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 20Gi
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -72,6 +71,9 @@ metadata:
   labels:
     app: wordpress
 spec:
+  selector:
+    matchLabels:
+      app: wordpress
   strategy:
     type: Recreate
   template:
