@@ -70,3 +70,6 @@
 2.6.0:
   - Bump client library to `kubernetes==10.0.1`
   - Update node mappings for 16.1 deprecation notices: https://kubernetes.io/blog/2019/07/18/api-deprecations-in-1-16/.
+  - Fix bug that prevented using multiple resource configurations in a single file.
+  - Add poststart operation mapped to read resource.
+
